Add support for shenandoah.